--- a/My1stApplication/app/src/main/res/layout/activity_main.xml
+++ b/My1stApplication/app/src/main/res/layout/activity_main.xml
@@ -31,4 +31,13 @@
         android:layout_marginBottom="16dp"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
+    <EditText
+        android:id="@+id/editTextTextPersonName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:textSize="50dp"
+        android:inputType="textPersonName"
+        android:text="Name hello my name is" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
